# peucr-core

./: kafkaTesting.py  pyproject.toml  test_compiler.py  test_config_loader.py  test_executor.py  test_framework.py  test_plugin.py  test_plugin_loader.py  test_spec_loader.py
plugins/: dpp_blocked_status.py  dpp_health.py  kafka_block_user.py  kafka_consumer_health.py  kafka_unblock_user.py  test_framework_health.py
specs/: block_stream_not_closed_by_failure_spec.json  block_user_invalid_account_deletion_spec.json  block_user_invalid_accout_activation_spec.json  block_user_invalid_gcid_spec.json  block_user_missing_account_activation_spec.json  block_user_missing_gcid_spec.json  block_user_spec.json  preconditions.json  unblock_stream_not_closed_by_failure_spec.json  unblock_user_invalid_account_activation_spec.json  unblock_user_invalid_accout_activation_spec.json  unblock_user_invalid_gcid_spec.json  unblock_user_missing_account_activation_spec.json  unblock_user_missing_gcid_spec.json  unblock_user_spec.json
src/peucr_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/peucr_core_ricardo_rodrigues/: framework.py  loaders.py  plugin.py  pluginsuite.py  validatorsuite.py
src/peucr_core_ricardo_rodrigues.egg-info/: PKG-INFO  SOURCES.txt
src/peucr_core_ricardo_rodrigues/plugins/: http.py
src/peucr_core_ricardo_rodrigues/validators/: default.py  json.py  oneof.py  status.py
