[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peucr_core_ricardo_rodrigues"
version = "0.1.15"
authors = [
  { name="Ricardo Rodrigues", email="ricardo.rodrigues@proton.me" },
]
description = "Plain extensible unified code requirement"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
